--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "compression": "^1.8.1",
     "helmet": "^8.1.0",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
